@@ -1,5 +1,10 @@
 2015-05-07  Natalia Portillo  <claunia@claunia.com>
 
+	* Tests/Interop.Apple.cs:
+	  Comment testing values not persistent across reboots.
+
+2015-05-07  Natalia Portillo  <claunia@claunia.com>
+
 	* Interop/Windows/Interop.Windows.Files.cs:
 	* Interop/Windows/Interop.Windows.types.cs:
 	  Implemented Kernel32's GetFileInformationByHandle() and
